# nagios_checks

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.sh  clean.sh
checks/: CMakeLists.txt  check_smart.cpp  check_smart.h  check_zpool.cpp  check_zpool.h  check_zpool_free.cpp  check_zpool_free.h  common.cpp  common.h
tests/: CMakeLists.txt  common.cpp  common.h  test1.cpp  test1.h  zpool  zpool.cmd
